syntax = "proto3";

message Song {
    string track_uri = 1;
    string track_name = 2;
    optional Artist artist = 3;
    string duration_ms = 4;
}

message Artist {
    string artist_name = 1;
    string artist_uri = 2;
    repeated string genres = 3;
    int32 popularity = 4;
}

message Playlist {
    repeated Song songs = 1;
    string playlist_name = 2;
    int32 followers = 3;
    int32 num_artists = 4;
    int32 num_songs = 5;
    int32 num_albums = 6;
}


message ArtistRequest {
    string artist_uri = 1;
}

message ArtistResponse {
    string artist_uri = 1;
    Artist artist = 2;
}